# cicd-diagnosis-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
cicd_diagnosis_env/: __init__.py  client.py  models.py
cicd_diagnosis_env/server/: app.py  environment.py  graders.py  log_generator.py
docs/superpowers/plans/: 2026-04-05-cicd-diagnosis-env.md
docs/superpowers/specs/: 2026-04-05-cicd-diagnosis-env-design.md
server/: app.py
